<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_openAirspy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="openAirspy"
        android:text="@string/open" />

    <Button
        android:id="@+id/bt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt_openAirspy"
        android:text="@string/info"
        android:onClick="info" />

    <Button
        android:id="@+id/bt_rx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt_info"
        android:text="@string/rx"
        android:onClick="rx" />

    <Button
        android:id="@+id/bt_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bt_rx"
        android:text="@string/stop"
        android:onClick="stop" />

    <TextView
        android:id="@+id/tv_sampRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bt_openAirspy"
        android:layout_alignBaseline="@+id/et_sampRateIndex"
        android:text="@string/sampRate" />

    <EditText
        android:id="@+id/et_sampRateIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_sampRateLabel"
        android:layout_below="@+id/bt_openAirspy"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:text="3" />

    <TextView
        android:id="@+id/tv_freqLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_sampRateIndex"
        android:layout_alignBaseline="@+id/et_freq"
        android:text="@string/freq" />

    <EditText
        android:id="@+id/et_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_freqLabel"
        android:layout_below="@+id/et_sampRateIndex"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:text="97000000" />

    <TextView
        android:id="@+id/tv_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_filename"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_freq"
        android:text="@string/filename" />

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_filename"
        android:layout_below="@+id/et_freq"
        android:layout_alignParentRight="true"
        android:text="airspy_android.iq" />

    <TextView
        android:id="@+id/tv_vgaGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_vgaGain"
        android:layout_alignParentLeft="true"
        android:text="@string/vgaGain" />

    <SeekBar
        android:id="@+id/sb_vgaGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_filename"
        android:layout_toRightOf="@+id/tv_vgaGain"
        android:max="100"
        android:progress="40" />

    <TextView
        android:id="@+id/tv_lnaGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_lnaGain"
        android:layout_alignParentLeft="true"
        android:text="@string/lnaGain" />

    <SeekBar
        android:id="@+id/sb_lnaGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sb_vgaGain"
        android:layout_toRightOf="@+id/tv_lnaGain"
        android:max="100"
        android:progress="60" />

    <TextView
        android:id="@+id/tv_mixerGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sb_mixerGain"
        android:layout_alignParentLeft="true"
        android:text="@string/mixerGain" />

    <SeekBar
        android:id="@+id/sb_mixerGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sb_lnaGain"
        android:layout_toRightOf="@+id/tv_mixerGain"
        android:max="100"
        android:progress="60" />

    <TextView
        android:id="@+id/tv_sampleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sp_sampleType"
        android:layout_alignParentLeft="true"
        android:text="@string/sampleType" />

    <Spinner
        android:id="@+id/sp_sampleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sb_mixerGain"
        android:layout_toRightOf="@+id/tv_sampleType"/>

    <CheckBox
        android:id="@+id/cb_packing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sp_sampleType"
        android:text="@string/packing" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_packing"
        android:autoLink="web"
        android:linksClickable="true"
        android:scrollbars="vertical" />
</RelativeLayout>
